@@ -1,5 +1,10 @@
 2004-06-27  Tomas Ebenlendr  <ebik@ucw.cz>
 
+	* normal/cmdline.c (grub_set_history): Fix off by one bug.  Fixed
+	the history buffer logic.
+
+2004-06-27  Tomas Ebenlendr  <ebik@ucw.cz>
+
 	* fs/ext2.c (FILETYPE_INO_MASK, FILETYPE_INO_DIRECTORY)
 	(FILETYPE_INO_SYMLINK): New macros.
 	(grub_ext2_find_file): Check if the node is a directory using the
